<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:textAlignment="center" android:background="@drawable/loginback">

    <Button
            android:id="@+id/button1"
            android:layout_width="89dp"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            android:text="@string/log_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="66dp" app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            android:layout_marginBottom="93dp" app:layout_constraintBottom_toTopOf="@+id/textView2"/>
    <Button
            android:id="@+id/button"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="538dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:text="@string/sign_up"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.552"/>
    <EditText
            android:layout_width="304dp"
            android:layout_height="52dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextPhone"
            android:background="@drawable/edit_text_border"
            android:hint="@string/phone_no" android:textColorHint="@color/white"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="218dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="461dp"
            android:autofillHints=""/>
    <EditText
            android:layout_width="304dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password" android:textColorHint="@color/white"
            android:fontFamily="sans-serif-condensed-light" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="279dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="402dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" android:layout_marginEnd="55dp"
            app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""/>
    <TextView
            android:text="@string/you_don_t_have_an_account_sign_up_down_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textAlignment="center" android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-light" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="536dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="176dp"/>
    <TextView
            android:layout_width="388dp"
            android:layout_height="85dp" android:id="@+id/textView3"
            android:text="@string/app_name" android:textColor="@color/white"
            android:textSize="60sp" android:textAlignment="center" android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="54dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="597dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>