<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupActivity" android:background="@drawable/loginback2">

    <TextView
            android:layout_width="388dp"
            android:layout_height="85dp" android:id="@+id/textView"
            android:text="@string/app_name" android:textColor="@color/white"
            android:textSize="60sp" android:textAlignment="center" android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="54dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="597dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="304dp"
            android:layout_height="52dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email" android:textColorHint="@color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:autofillHints="" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="307dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="372dp"
            tools:ignore="TextFields"/>
    <EditText
            android:layout_width="304dp"
            android:layout_height="52dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextPhoneNo"
            android:background="@drawable/edit_text_border"
            android:hint="@string/phone_no" android:textColorHint="@color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="375dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="304dp"/>
    <EditText
            android:layout_width="304dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword2"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password" android:textColorHint="@color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="434dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="247dp"
            android:layout_marginEnd="53dp" android:layout_marginStart="54dp"/>
    <EditText
            android:layout_width="304dp"
            android:layout_height="52dp"
            android:inputType="phone"
            android:ems="10"
            android:background="@drawable/edit_text_border"
            android:hint="@string/name" android:textColorHint="@color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:autofillHints=""
            android:id="@+id/editTextName"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="239dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="440dp"/>
    <Button
            android:id="@+id/signup"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="496dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="150dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>